# housing-ocr

./: .gitignore  AGENTS.md  README.md  app.py  config.example.toml  justfile  llm.py  models.py  processor.py  pyproject.toml  test_ocr_single.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: index.ts
frontend/src/components/: DetailModal.vue  DocumentCard.vue  DocumentCardSkeleton.vue  ImageViewer.vue  LocationModal.vue  ModelModal.vue  PhotoSwipe.vue  StationModal.vue  UploadModal.vue
frontend/src/composables/: useAuthToken.ts  useDocuments.ts  useLocations.ts
frontend/src/types/: index.ts
reference/: demo_vllm.py
scripts/: diagnose_ocr.py  generate_token.py  migrate_db.py  migrate_queue_fields.py  migrate_retry_count.py  reset_llm_status.py  test_ocr.py  test_ocr_single.py  test_openrouter.py  test_vllm_connection.py  update_geoip_database.py
src/: app.py  geolocation.py  llm.py  models.py  ocr.py  processor.py  security.py
src/housing_ocr/: app.py  database.py  ocr.py  queue_manager.py  retry_manager.py
src/housing_ocr/templates/: document.html  index.html
templates/: index.html
tests/: test_llm_failure_flow.py
