[project]
name = "housing-ocr"
version = "0.1.0"
description = "OCR document processing system using dots.ocr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "vllm>=0.9.0",
    "tomli>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
