[project]
name = "housing-ocr"
version = "0.1.0"
description = "日本房产文档智能解析系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "openai>=1.5.0",
    "pymupdf>=1.23.0",
    "pillow>=10.1.0",
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    "httpx>=0.25.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
